--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-github page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My Assignments</title>
+</head>
+<body>
+  <h1>Assignment 1</h1>
+  <ul>
+    <li>Project 1</li>
+    <li>Project 2</li>
+    <li>Project 3</li>
+  </ul>
+</body>
+</html>
+
