--- a/a1/index.html
+++ b/a1/index.html
@@ -5,12 +5,11 @@
   <title>My Assignments</title>
 </head>
 <body>
-  <h1>Assignment 1</h1>
+  <h1>Assignments</h1>
   <ul>
-    <li>Project 1</li>
-    <li>Project 2</li>
-    <li>Project 3</li>
+    <li>Assignment1</li>
+    <li>Assignment 2</li>
+    <li>Assignment 3</li>
   </ul>
 </body>
 </html>
-
