--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <li>Assignment 1</li>
     <li>Assignment 2</li>
     <li>Assignment 3</li>
-    <li>Assignment 4</li>
+    <li><a href="a4/calc.html" target="_blank">Assignment 4</a></li>
   </ul>
 </body>
 </html>
