--- a/a1/index.html
+++ b/a1/index.html
@@ -7,9 +7,10 @@
 <body>
   <h1>Assignments</h1>
   <ul>
-    <li>Assignment1</li>
+    <li>Assignment 1</li>
     <li>Assignment 2</li>
     <li>Assignment 3</li>
+    <li><a href="a4/calc.html" target="_blank">Assignment 4</a></li>
   </ul>
 </body>
 </html>
